--- a/DQN_Asterix_Final_version_test.ipynb
+++ b/DQN_Asterix_Final_version_test.ipynb
@@ -148,7 +148,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 15,
       "metadata": {
         "id": "fwaosFMR7zx8"
       },
@@ -222,7 +222,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 16,
       "metadata": {
         "id": "VZ_V4c847zx-"
       },
@@ -322,7 +322,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 18,
       "metadata": {
         "id": "C39jx4fY7zx_"
       },
@@ -392,7 +392,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 19,
       "metadata": {
         "id": "XgNmgla57zyA"
       },
@@ -429,7 +429,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -442,11 +442,11 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Episode:1 Score:150.0\n",
-            "Episode:2 Score:300.0\n",
+            "Episode:1 Score:300.0\n",
+            "Episode:2 Score:100.0\n",
             "Episode:3 Score:250.0\n",
-            "Episode:4 Score:100.0\n",
-            "Episode:5 Score:50.0\n"
+            "Episode:4 Score:150.0\n",
+            "Episode:5 Score:150.0\n"
           ]
         }
       ],
@@ -480,7 +480,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -500,7 +500,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "c:\\Users\\djang\\anaconda3\\envs\\Python311\\Lib\\site-packages\\stable_baselines3\\common\\buffers.py:241: UserWarning: This system does not have apparently enough memory to store the complete replay buffer 16.94GB > 7.62GB\n",
+            "c:\\Users\\djang\\anaconda3\\envs\\Python311\\Lib\\site-packages\\stable_baselines3\\common\\buffers.py:241: UserWarning: This system does not have apparently enough memory to store the complete replay buffer 16.94GB > 7.09GB\n",
             "  warnings.warn(\n"
           ]
         }
@@ -681,7 +681,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 22,
       "metadata": {
         "id": "MnMmxZwr7zyD"
       },
@@ -721,7 +721,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -737,7 +737,7 @@
           "traceback": [
             "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[9], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#save final model\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# dqn_path_1 = os.path.join('Training', 'Saved Models', 'DQN_BeamRider_Model_1')\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# model.save(dqn_path)\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# del model\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m model \u001b[38;5;241m=\u001b[39m DQN\u001b[38;5;241m.\u001b[39mload(dqn_path, env)\n\u001b[0;32m      6\u001b[0m model\u001b[38;5;241m.\u001b[39mset_env(env)\n",
+            "Cell \u001b[1;32mIn[23], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#save final model\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# dqn_path_1 = os.path.join('Training', 'Saved Models', 'DQN_BeamRider_Model_1')\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# model.save(dqn_path)\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# del model\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m model \u001b[38;5;241m=\u001b[39m DQN\u001b[38;5;241m.\u001b[39mload(dqn_path, env)\n\u001b[0;32m      6\u001b[0m model\u001b[38;5;241m.\u001b[39mset_env(env)\n",
             "File \u001b[1;32mc:\\Users\\djang\\anaconda3\\envs\\Python311\\Lib\\site-packages\\stable_baselines3\\common\\base_class.py:680\u001b[0m, in \u001b[0;36mBaseAlgorithm.load\u001b[1;34m(cls, path, env, device, custom_objects, print_system_info, force_reset, **kwargs)\u001b[0m\n\u001b[0;32m    677\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m== CURRENT SYSTEM INFO ==\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    678\u001b[0m     get_system_info()\n\u001b[1;32m--> 680\u001b[0m data, params, pytorch_variables \u001b[38;5;241m=\u001b[39m load_from_zip_file(\n\u001b[0;32m    681\u001b[0m     path,\n\u001b[0;32m    682\u001b[0m     device\u001b[38;5;241m=\u001b[39mdevice,\n\u001b[0;32m    683\u001b[0m     custom_objects\u001b[38;5;241m=\u001b[39mcustom_objects,\n\u001b[0;32m    684\u001b[0m     print_system_info\u001b[38;5;241m=\u001b[39mprint_system_info,\n\u001b[0;32m    685\u001b[0m )\n\u001b[0;32m    687\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m data \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo data found in the saved file\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    688\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m params \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo params found in the saved file\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
             "File \u001b[1;32mc:\\Users\\djang\\anaconda3\\envs\\Python311\\Lib\\site-packages\\stable_baselines3\\common\\save_util.py:403\u001b[0m, in \u001b[0;36mload_from_zip_file\u001b[1;34m(load_path, load_data, custom_objects, device, verbose, print_system_info)\u001b[0m\n\u001b[0;32m    376\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload_from_zip_file\u001b[39m(\n\u001b[0;32m    377\u001b[0m     load_path: Union[\u001b[38;5;28mstr\u001b[39m, pathlib\u001b[38;5;241m.\u001b[39mPath, io\u001b[38;5;241m.\u001b[39mBufferedIOBase],\n\u001b[0;32m    378\u001b[0m     load_data: \u001b[38;5;28mbool\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    382\u001b[0m     print_system_info: \u001b[38;5;28mbool\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m,\n\u001b[0;32m    383\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Tuple[Optional[Dict[\u001b[38;5;28mstr\u001b[39m, Any]], TensorDict, Optional[TensorDict]]:\n\u001b[0;32m    384\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    385\u001b[0m \u001b[38;5;124;03m    Load model data from a .zip archive\u001b[39;00m\n\u001b[0;32m    386\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    401\u001b[0m \u001b[38;5;124;03m        and dict of pytorch variables\u001b[39;00m\n\u001b[0;32m    402\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 403\u001b[0m     file \u001b[38;5;241m=\u001b[39m open_path(load_path, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m, verbose\u001b[38;5;241m=\u001b[39mverbose, suffix\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mzip\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    405\u001b[0m     \u001b[38;5;66;03m# set device to cpu if cuda is not available\u001b[39;00m\n\u001b[0;32m    406\u001b[0m     device \u001b[38;5;241m=\u001b[39m get_device(device\u001b[38;5;241m=\u001b[39mdevice)\n",
             "File \u001b[1;32mc:\\Users\\djang\\anaconda3\\envs\\Python311\\Lib\\functools.py:909\u001b[0m, in \u001b[0;36msingledispatch.<locals>.wrapper\u001b[1;34m(*args, **kw)\u001b[0m\n\u001b[0;32m    905\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m args:\n\u001b[0;32m    906\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfuncname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m requires at least \u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m    907\u001b[0m                     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m1 positional argument\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m--> 909\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m dispatch(args[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__class__\u001b[39m)(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkw)\n",
@@ -757,6 +757,48 @@
         "# del model\n",
         "model = DQN.load(dqn_path, env)\n",
         "model.set_env(env)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 27,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Current working directory: C:\\Users\\djang\\AppData\\Local\\Programs\\Microsoft VS Code\n",
+            "Training directory does not exist.\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Verify the current working directory\n",
+        "print(\"Current working directory:\", os.getcwd())\n",
+        "\n",
+        "# Define the model name and relative path\n",
+        "saved_model = \"Model_target_up_20k.zip\"\n",
+        "dqn_path = os.path.join('Training', 'Saved_Models', saved_model)\n",
+        "\n",
+        "# Check if the Training directory exists\n",
+        "if os.path.exists('Training'):\n",
+        "    print(\"Training directory exists.\")\n",
+        "    # Check if the Saved_Models directory exists within the Training directory\n",
+        "    if os.path.exists(os.path.join('Training', 'Saved_Models')):\n",
+        "        print(\"Saved_Models directory exists.\")\n",
+        "        # Check if the specific model file exists within the Saved_Models directory\n",
+        "        if os.path.exists(dqn_path):\n",
+        "            print(f\"Model found at {dqn_path}\")\n",
+        "            # Load the model\n",
+        "            model = DQN.load(dqn_path)\n",
+        "            model.set_env(env)\n",
+        "        else:\n",
+        "            print(f\"Model not found at {dqn_path}. Please check the path and filename.\")\n",
+        "    else:\n",
+        "        print(\"Saved_Models directory does not exist within the Training directory.\")\n",
+        "else:\n",
+        "    print(\"Training directory does not exist.\")"
       ]
     },
     {
