modified to local files instead of google cloud

--- a/DQN_Asterix_Final_version.ipynb
+++ b/DQN_Asterix_Final_version.ipynb
@@ -2,11 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "!apt-get install -y swig\n",
-        "!pip install gymnasium[atari] torch torchvision stable-baselines3\n",
-        "!pip install gymnasium[accept-rom-license]"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -14,11 +10,10 @@
         "id": "LKVJxCtW8A0X",
         "outputId": "a3158fac-12a4-4627-e723-0592c5828bbc"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Reading package lists... Done\n",
             "Building dependency tree... Done\n",
@@ -141,6 +136,11 @@
             "Successfully installed AutoROM.accept-rom-license-0.6.1 autorom-0.4.2\n"
           ]
         }
+      ],
+      "source": [
+        "# !apt-get install -y swig\n",
+        "# !pip install gymnasium[atari] torch torchvision stable-baselines3\n",
+        "# !pip install gymnasium[accept-rom-license]"
       ]
     },
     {
@@ -187,34 +187,34 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
+      "execution_count": null,
       "metadata": {
-        "id": "XjxJkZ9-9qJu",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "XjxJkZ9-9qJu",
         "outputId": "a159245e-059c-45d4-edf6-eec69e67c27e"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.10/dist-packages/ipykernel/ipkernel.py:283: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
             "  and should_run_async(code)\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Mounted at /content/drive\n"
           ]
         }
+      ],
+      "source": [
+        "# from google.colab import drive\n",
+        "# drive.mount('/content/drive')"
       ]
     },
     {
@@ -361,6 +361,9 @@
         "    '_init_setup_model': True\n",
         "}\n",
         "\n",
+        "# Define the log path using os.path.join for cross-platform compatibility\n",
+        "log_path = os.path.join('Training', 'Target_update_Logs')\n",
+        "\n",
         "# Update parameters based on your preferred values\n",
         "config.update({\n",
         "    'learning_rate': 1e-4,              #1e-2, 1e-3, 1e-4, 1e-5, 1e-6, 1e-8\n",
@@ -379,7 +382,8 @@
         "         'activation_fn': th.nn.ReLU\n",
         "     },\n",
         "    'verbose': 1,\n",
-        "    'tensorboard_log': '/content/drive/MyDrive/Colab Notebooks/Asterix/Training/Logs_Asterix/200k_Logs', ## change for different logs different parameters\n",
+        "    # 'tensorboard_log': '/content/drive/MyDrive/Colab Notebooks/Asterix/Training/Logs_Asterix/200k_Logs', ## change for different logs different parameters\n",
+        "    'tensorboard_log': log_path, ## change for different logs different parameters\n",
         "})"
       ]
     },
@@ -441,8 +445,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Episode:1 Score:200.0\n",
             "Episode:2 Score:400.0\n",
@@ -492,8 +496,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Using cuda device\n"
           ]
@@ -507,8 +511,10 @@
         "\n",
         "\n",
         "# Recreate callbacks to ensure they are properly initialized\n",
-        "checkpoint_callback = CheckpointCallback(save_freq=1000, save_path='./drive/MyDrive/Colab Notebooks/Asterix/logs/', name_prefix='dqn_model')\n",
-        "eval_callback = EvalCallback(env, best_model_save_path='./drive/MyDrive/Colab Notebooks/Asterix/logs/best_model', log_path='./drive/MyDrive/Colab Notebooks/Asterix/logs/results', eval_freq=500, deterministic=True, render=False)\n",
+        "# checkpoint_callback = CheckpointCallback(save_freq=1000, save_path='./drive/MyDrive/Colab Notebooks/Asterix/logs/', name_prefix='dqn_model')\n",
+        "# eval_callback = EvalCallback(env, best_model_save_path='./drive/MyDrive/Colab Notebooks/Asterix/logs/best_model', log_path='./drive/MyDrive/Colab Notebooks/Asterix/logs/results', eval_freq=500, deterministic=True, render=False)\n",
+        "checkpoint_callback = CheckpointCallback(save_freq=1000, save_path='./logs/', name_prefix='dqn_model')\n",
+        "eval_callback = EvalCallback(env, best_model_save_path='./logs/best_model', log_path='./logs/results', eval_freq=500, deterministic=True, render=False)\n",
         "\n",
         "# CNN tuning\n",
         "# tb_log_name = \"CNN_Base\"\n",
@@ -539,7 +545,10 @@
         "# target update tuning\n",
         "# tb_log_name = \"target_up_30k\"\n",
         "# tb_log_name = \"target_up_10k\"\n",
+        "\n",
+        "\n",
         "# --> used for trianing final model\n",
+        "\n",
         "tb_log_name = \"target_up_20k\"\n",
         "\n",
         "# exploration init tuning\n",
@@ -587,7 +596,9 @@
         "# target update tuning\n",
         "# saved_model = \"Model_target_up_30k\"\n",
         "# saved_model = \"Model_target_up_10k\"\n",
+        "\n",
         "# --> used for training final model\n",
+        "\n",
         "saved_model = \"Model_target_up_20k\"\n",
         "\n",
         "# exploration final tuning\n",
@@ -647,7 +658,7 @@
         "# Train for initial steps\n",
         "# model.learn(total_timesteps=2000, callback=[checkpoint_callback, eval_callback], reset_num_timesteps=False)\n",
         "#\n",
-        "# model.learn(total_timesteps=50000, tb_log_name=tb_log_name, callback=[checkpoint_callback, eval_callback])\n",
+        "model.learn(total_timesteps=50000, tb_log_name=tb_log_name, callback=[checkpoint_callback, eval_callback])\n",
         "# Pass reset_num_timesteps=False to continue the training curve in tensorboard\n",
         "# By default, it will create a new curve\n",
         "# model.learn(total_timesteps=2000, tb_log_name=\"second_run\", callback=[checkpoint_callback, eval_callback], reset_num_timesteps=False)\n",
@@ -674,9 +685,9 @@
       "outputs": [],
       "source": [
         "## Save and Reload Model ##\n",
-        "# dqn_path = os.path.join('Training', 'Saved Models', saved_model)\n",
+        "dqn_path = os.path.join('Training/Saved_Models', saved_model)\n",
         "\n",
-        "dqn_path = os.path.join('/content/drive/MyDrive/Colab Notebooks/Asterix/Training/Saved_Models', saved_model)\n",
+        "# dqn_path = os.path.join('/content/drive/MyDrive/Colab Notebooks/Asterix/Training/Saved_Models', saved_model)\n",
         "model.save(dqn_path)\n"
       ]
     },
@@ -690,12 +701,15 @@
       "outputs": [],
       "source": [
         "del model\n",
-        "dqn_path = os.path.join('/content/drive/MyDrive/Colab Notebooks/Asterix/Training/Saved_Models', saved_model)\n",
+        "dqn_path = os.path.join('Training', 'Saved_Models', saved_model)\n",
+        "# dqn_path = os.path.join('/content/drive/MyDrive/Colab Notebooks/Asterix/Training/Saved_Models', saved_model)\n",
         "model = DQN.load(dqn_path, env)\n",
         "\n",
         "# Recreate callbacks to ensure they are properly initialized\n",
-        "checkpoint_callback = CheckpointCallback(save_freq=1000, save_path='./drive/MyDrive/Colab Notebooks/Asterix/logs/', name_prefix='dqn_model')\n",
-        "eval_callback = EvalCallback(env, best_model_save_path='./drive/MyDrive/Colab Notebooks/Asterix/logs/best_model', log_path='./drive/MyDrive/Colab Notebooks/Asterix/logs/results', eval_freq=500, deterministic=True, render=False)\n",
+        "# checkpoint_callback = CheckpointCallback(save_freq=1000, save_path='./drive/MyDrive/Colab Notebooks/Asterix/logs/', name_prefix='dqn_model')\n",
+        "# eval_callback = EvalCallback(env, best_model_save_path='./drive/MyDrive/Colab Notebooks/Asterix/logs/best_model', log_path='./drive/MyDrive/Colab Notebooks/Asterix/logs/results', eval_freq=500, deterministic=True, render=False)\n",
+        "checkpoint_callback = CheckpointCallback(save_freq=1000, save_path='./logs/', name_prefix='dqn_model')\n",
+        "eval_callback = EvalCallback(env, best_model_save_path='./logs/best_model', log_path='./logs/results', eval_freq=500, deterministic=True, render=False)\n",
         "\n",
         "model.set_env(env)\n",
         "# Continue training for more steps\n",
@@ -706,16 +720,16 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Vuf2FeMW7zyE",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "Vuf2FeMW7zyE",
         "outputId": "1619832d-b5cc-4c7c-aaf0-91de5696a4e1"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.10/dist-packages/stable_baselines3/common/buffers.py:241: UserWarning: This system does not have apparently enough memory to store the complete replay buffer 16.94GB > 12.04GB\n",
             "  warnings.warn(\n"
@@ -752,8 +766,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Evaluation Episode:1 Score:1450.0\n",
             "Evaluation Episode:2 Score:1100.0\n",
@@ -792,12 +806,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!kill 14898\n",
-        "%load_ext tensorboard\n",
-        "pathoflogsdir = \"/content/drive/MyDrive/Colab Notebooks/Asterix/Training/Logs_Asterix/CNN_Logs/\"\n",
-        "%tensorboard --logdir $pathoflogsdir"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -806,17 +815,15 @@
         "id": "pC-XpWI7CABa",
         "outputId": "f8e5f89c-32f4-4eec-c4eb-28f94b2ac3ce"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "/bin/bash: line 1: kill: (14898) - No such process\n"
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
             "text/plain": [
               "ERROR: Failed to launch TensorBoard (exited with 2).\n",
@@ -839,12 +846,25 @@
               "tensorboard: error: argument {serve,dev}: invalid choice: 'Notebooks/Asterix/Training/Logs_Asterix/CNN_Logs/' (choose from 'serve', 'dev')"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         }
+      ],
+      "source": [
+        "# !kill 14898\n",
+        "# %load_ext tensorboard\n",
+        "# pathoflogsdir = \"/content/drive/MyDrive/Colab Notebooks/Asterix/Training/Logs_Asterix/CNN_Logs/\"\n",
+        "# %tensorboard --logdir $pathoflogsdir"
       ]
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "machine_shape": "hm",
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "name": "python3"
@@ -860,13 +880,7 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.11.9"
-    },
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4",
-      "machine_shape": "hm"
-    },
-    "accelerator": "GPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
